--- a/style.css
+++ b/style.css
@@ -799,6 +799,7 @@ span{
         padding: 0 3% 23rem;
         justify-content: center;
         text-align: center;
+        margin-bottom: 5rem;
     }
 
     .home-content h3{
