--- a/style.css
+++ b/style.css
@@ -508,7 +508,7 @@ span{
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, .6), #421d88);
+    background: linear-gradient(rgba(0, 0, 0, .6), #1f5b94);
     color: var(--white-color);
     display: flex;
     justify-content: center;
