--- a/style.css
+++ b/style.css
@@ -28,12 +28,11 @@
 .dark-mode{
     --bg-color: #11111a;
     --text-color: #fdfdfdfd;
-    --main-color: #7ecdfa;
+    --main-color: #6fa0ca;
     --two-color: #b8e9fe;
     --icon-color: #ddd0bb;
     --shadow-color: rgba(0, 0, 0, .7);
 }
-
 
 /*barra de rolagem*/
 ::-webkit-scrollbar{
@@ -425,10 +424,9 @@ span{
     font-size: 2rem;
 }
 
-/*Portifólio*/
+/*Portifólios*/
 .portfolio{
-    padding-bottom: 2rem;
-    padding-top: 2rem;
+    padding-bottom: 1rem;
 }
 
 .portfolio h2{
